rello/svc-redis.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2024-10-24T16:41:31Z"
  labels:
    app: redis
  name: redis
  namespace: rello
  resourceVersion: "255871"
  uid: 5581d4a6-e5de-45fc-9f17-118fe063a010
spec:
  clusterIP: 10.103.247.86
  clusterIPs:
  - 10.103.247.86
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    app: redis
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
