rello/svc-rello-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: rello-lb
  namespace: rello
  labels:
    # thx to this label, both ippool and l2 announcement policy will select this service.
    announcement: arp
spec:
  selector:
    app: rello
  type: LoadBalancer
  ports:
  - port: 8000
