rello/svc-rello-np.yaml
apiVersion: v1
kind: Service
metadata:
  name: rello-np
  namespace: rello
spec:
  selector:
    app: rello
  type: NodePort
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
