rello/svc-rello.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: rello
  name: rello
  namespace: rello
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: rello
  type: ClusterIP
