rello/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rello
  namespace: rello
spec:
  ingressClassName: cilium
  rules:
  - http:
      paths:
      - backend:
          service:
            name: rello
            port:
              number: 8000
        path: /api/hello
        pathType: Prefix
