rello/np-allow-rello-to-coredns.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: rello
  name: allow-rello-to-coredns
spec:
  podSelector: 
    matchLabels:
      app: rello
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector:
        matchLabels:
          k8s-app: kube-dns
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
