rello/np-allow-rello-to-redis.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: rello
  name: allow-rello-to-redis
spec:
  podSelector: 
    matchLabels:
      app: rello
  policyTypes: ["Egress"]
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
    ports:
    - protocol: TCP
      port: 6379
